add integration tests with an in-memory embedded database to persistence layer

--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
 }
 
 test {
