--- a/web/build.gradle
+++ b/web/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     implementation project (':service')
+    implementation project (':api')
     implementation group: 'org.springframework', name: 'spring-context', version: springVersion
     implementation group: 'org.springframework', name: 'spring-webmvc', version: springVersion
     implementation group: 'org.springframework', name: 'spring-web', version: springVersion
@@ -17,6 +18,7 @@ dependencies {
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.3'
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     annotationProcessor 'org.projectlombok:lombok:1.18.18'
     testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
