--- a/service/build.gradle
+++ b/service/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.8.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
 }
 
 test {
