--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,23 @@
-plugins {
-    id 'java'
+allprojects {
+    apply plugin: 'java'
+
+    group 'com.epam.esm'
+    version '1.0-SNAPSHOT'
+
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+
+    dependencies {
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
+        annotationProcessor 'org.projectlombok:lombok:1.18.18'
+    }
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
 
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
 
-group 'com.epam.esm'
-version '1.0-SNAPSHOT'
 
