--- a/persistence/src/main/resources/database-dev.properties
+++ b/persistence/src/main/resources/database-dev.properties
@@ -3,5 +3,5 @@ spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/gift_certificates
 spring.datasource.maxPoolSize=10
 spring.datasource.login=root
 spring.datasource.password=Pi31415926
-spring.profiles.active=prod
+spring.profiles.active=dev
 
