--- a/web/build.gradle
+++ b/web/build.gradle
@@ -2,15 +2,14 @@ plugins {
     id 'war'
 }
 
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+war {
+    archivesBaseName = 'Certificates'
+    version '1.0-SNAPSHOT'
 }
 
 dependencies {
-    implementation project (':service')
-    implementation project (':api')
+    implementation project(':service')
+    implementation project(':api')
     implementation group: 'org.springframework', name: 'spring-context', version: springVersion
     implementation group: 'org.springframework', name: 'spring-webmvc', version: springVersion
     implementation group: 'org.springframework', name: 'spring-web', version: springVersion
@@ -19,8 +18,6 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.3'
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
-    annotationProcessor 'org.projectlombok:lombok:1.18.18'
     testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
