--- a/service/build.gradle
+++ b/service/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-core', version: springVersion
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
     implementation group: 'org.springframework', name: 'spring-jdbc', version: springVersion
+    implementation group: 'org.springframework', name: 'spring-tx', version: springVersion
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
