--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id "org.sonarqube" version "3.1.1"
+}
 allprojects {
     apply plugin: 'java'
 
@@ -17,7 +20,13 @@ allprojects {
         annotationProcessor 'org.projectlombok:lombok:1.18.18'
     }
 }
-
+sonarqube {
+    properties {
+        property 'sonar.projectKey', 'Certificates-1.0-SNAPSHOT'
+        property 'sonar.host.url', 'http://192.168.182.129:9000'
+        property 'sonar.login', 'ce99dec55af4a951cbbcff0b864cddd45f8c2902'
+    }
+}
 
 
 
