--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha5'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+    implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
     testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
