--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -2,14 +2,14 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-context', version: springVersion
     implementation group: 'org.springframework', name: 'spring-core', version: springVersion
     implementation group: 'org.springframework', name: 'spring-jdbc', version: springVersion
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha5'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
-    implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: hikariCPVersion
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
+    implementation group: 'mysql', name: 'mysql-connector-java', version: mysqlConnectorVersion
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: commonsCollectionsVers
     testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
+    testImplementation group: 'com.h2database', name: 'h2', version: h2dbVersion
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 }
 
 test {
