--- a/web/build.gradle
+++ b/web/build.gradle
@@ -8,16 +8,17 @@ war {
 }
 
 dependencies {
+    implementation project(':persistence')
     implementation project(':service')
     implementation project(':api')
     implementation group: 'org.springframework', name: 'spring-context', version: springVersion
     implementation group: 'org.springframework', name: 'spring-webmvc', version: springVersion
     implementation group: 'org.springframework', name: 'spring-web', version: springVersion
     implementation group: 'org.springframework', name: 'spring-context-support', version: springVersion
-    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.3'
-    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: jxServletApiVersion
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonDatabindVersion
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonDatatypeVersion
+    implementation group: 'javax.validation', name: 'validation-api', version: jxValidationApiVersion
     testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.+'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
